--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.15.6",
+    "@types/node": "^20.1.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -25,9 +27,13 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "msw": "^0.0.0-fetch.rc-14",
     "prettier": "^2.8.8",
     "stub": "file:./stub",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
